# szal

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  codecov.yml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: engine.rs  flow.rs  state.rs  step.rs  workflow.rs
benchmarks/: history.csv
docs/: ROADMAP.md
examples/: dag.rs  retry_rollback.rs  sequential.rs  state_machine.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_flow_deser.rs  fuzz_flow_validate.rs  fuzz_state_transitions.rs  fuzz_step_deser.rs
scripts/: bench-history.sh  version-bump.sh
src/: bus.rs  condition.rs  engine.rs  error.rs  flow.rs  lib.rs  metrics.rs  state.rs  step.rs  storage.rs
src/engine/: dag.rs  hardware.rs  hierarchical.rs  mod.rs  parallel.rs  queue_runner.rs  result.rs  runner.rs  sequential.rs  step_exec.rs
src/mcp/: mod.rs  pool.rs  protocol.rs  registry.rs  tenant.rs  tool.rs  transport.rs
src/mcp/tools/: conversion_tools.rs  encoding_tools.rs  engine_tools.rs  file_tools.rs  flow_tools.rs  git_tools.rs  hash_tools.rs  json_tools.rs  math_tools.rs  mod.rs  net_tools.rs  process_tools.rs  state_tools.rs  step_tools.rs  system_tools.rs  template_tools.rs
src/tests/: mod.rs
supply-chain/: config.toml
