[package]
name = "szal"
version = "0.21.3"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-only"
description = "Workflow engine — step/flow execution with branching, retry, rollback, and parallel stages"
homepage = "https://github.com/MacCracken/szal"
repository = "https://github.com/MacCracken/szal"
readme = "README.md"
keywords = ["workflow", "pipeline", "orchestration", "dag", "automation"]
categories = ["asynchronous", "concurrency"]

[features]
default = []
mcp = ["dep:axum", "dep:tokio-stream", "dep:tower", "dep:hyper"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "io-std", "net"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# MCP transport
axum = { version = "0.8", optional = true }
tokio-stream = { version = "0.1", optional = true }
tower = { version = "0.5", optional = true }
hyper = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
proptest = "1"

[[bench]]
name = "workflow"
harness = false

[[bench]]
name = "step"
harness = false

[[bench]]
name = "flow"
harness = false

[[bench]]
name = "state"
harness = false

[[example]]
name = "sequential"

[[example]]
name = "dag"

[[example]]
name = "state_machine"

[[example]]
name = "retry_rollback"
